Fix whitespace under embeds

--- a/holzstock/static/base_theme/scss/compiled_css/all.css
+++ b/holzstock/static/base_theme/scss/compiled_css/all.css
@@ -5758,6 +5758,25 @@ footer {
     .jumbotron {
       min-height: 200px; } }
 
+/*
+  http://docs.wagtail.io/en/v0.8.8/core_components/pages/writing_templates.html?highlight=responsive#responsive-embeds
+*/
+.rich-text img {
+  max-width: 100%;
+  height: auto; }
+
+.responsive-object {
+  position: relative; }
+
+.responsive-object iframe,
+.responsive-object object,
+.responsive-object embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
 /*------------------------------------*    #LAYOUT
 \*------------------------------------*/
 /*------------------------------------*    #STATE
